HWS-499
Rename Java classes to CamelCase
Correction of unit tests